# py-navx

./: .gitignore  CMakeLists.txt  Pipfile  README.md  setup.py
examples/: CMakeLists.txt  demo.py
examples/navXTimeSync/: CMakeLists.txt  TimeStamp.cpp
navx/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
